[gd_scene load_steps=37 format=3 uid="uid://dtw13btpgx5q2"]

[ext_resource type="Texture2D" uid="uid://6ipdm8h6yhfp" path="res://content/graphics/characters/character.png" id="1_egk1u"]
[ext_resource type="Script" uid="uid://ct4h8jjnyqecb" path="res://content/characters/player.gd" id="1_waxjt"]
[ext_resource type="AudioStream" uid="uid://dxm3t2bgrch2m" path="res://content/audio/player_soundJumpStart.wav" id="3_cd2hf"]
[ext_resource type="AudioStream" uid="uid://bsnohfkpkwh21" path="res://content/audio/player_soundJumpStop.wav" id="4_trbxg"]
[ext_resource type="Texture2D" uid="uid://bbkrxslju54uk" path="res://content/graphics/particle.png" id="5_0i8tl"]
[ext_resource type="AudioStream" uid="uid://dndnq8kwdsiny" path="res://content/audio/player_soundPain.wav" id="6_wsgte"]
[ext_resource type="AudioStream" uid="uid://mmc245ays5wy" path="res://content/audio/player_attack.wav" id="7_ym0xy"]
[ext_resource type="AudioStream" uid="uid://dsn03502beug0" path="res://content/audio/gravel2.ogg" id="8_m65se"]

[sub_resource type="AtlasTexture" id="AtlasTexture_m61x6"]
atlas = ExtResource("1_egk1u")
region = Rect2(160, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yv3g0"]
atlas = ExtResource("1_egk1u")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lgi8x"]
atlas = ExtResource("1_egk1u")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8nd5x"]
atlas = ExtResource("1_egk1u")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7hunc"]
atlas = ExtResource("1_egk1u")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gm8d2"]
atlas = ExtResource("1_egk1u")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d52wc"]
atlas = ExtResource("1_egk1u")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8pok7"]
atlas = ExtResource("1_egk1u")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yede7"]
atlas = ExtResource("1_egk1u")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5dvk4"]
atlas = ExtResource("1_egk1u")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_re0jb"]
atlas = ExtResource("1_egk1u")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fymr5"]
atlas = ExtResource("1_egk1u")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rxrbi"]
atlas = ExtResource("1_egk1u")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r87nc"]
atlas = ExtResource("1_egk1u")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_odaja"]
atlas = ExtResource("1_egk1u")
region = Rect2(224, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_6tfcp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m61x6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yv3g0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lgi8x")
}, {
"duration": 4.0,
"texture": SubResource("AtlasTexture_8nd5x")
}],
"loop": false,
"name": &"attack",
"speed": 30.0
}, {
"frames": [{
"duration": 3.0,
"texture": SubResource("AtlasTexture_7hunc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gm8d2")
}],
"loop": true,
"name": &"idle",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d52wc")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8pok7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yede7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5dvk4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_re0jb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fymr5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rxrbi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r87nc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_odaja")
}],
"loop": true,
"name": &"walk",
"speed": 19.0
}]

[sub_resource type="Animation" id="Animation_8mnug"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_7bphv"]
resource_name = "pain"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1vnhd"]
_data = {
&"RESET": SubResource("Animation_8mnug"),
&"pain": SubResource("Animation_7bphv")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hlfnc"]
radius = 11.0
height = 74.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g4123"]
size = Vector2(58, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_ff0jm"]
atlas = ExtResource("5_0i8tl")
region = Rect2(20, 0, 10, 10)

[sub_resource type="Curve" id="Curve_0rvsl"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.502028), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_foeg7"]
offsets = PackedFloat32Array(0.294671, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="AtlasTexture" id="AtlasTexture_r6a8v"]
atlas = ExtResource("5_0i8tl")
region = Rect2(20, 0, 10, 10)

[sub_resource type="Curve" id="Curve_ak0nt"]
_data = [Vector2(0, 0.994141), 0.0, 0.0, 0, 0, Vector2(1, 0.285264), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="AtlasTexture" id="AtlasTexture_na8hk"]
atlas = ExtResource("5_0i8tl")
region = Rect2(10, 0, 10, 10)

[sub_resource type="Gradient" id="Gradient_8180a"]
colors = PackedColorArray(1, 0, 0, 1, 1, 1, 1, 0)

[node name="Player" type="CharacterBody2D" groups=["Player"]]
collision_layer = 2
collision_mask = 17
script = ExtResource("1_waxjt")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -40)
scale = Vector2(2.5, 2.5)
sprite_frames = SubResource("SpriteFrames_6tfcp")
animation = &"attack"
autoplay = "idle"
frame = 3
frame_progress = 1.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_1vnhd")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -37)
shape = SubResource("CapsuleShape2D_hlfnc")

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(18, -45)
shape = SubResource("RectangleShape2D_g4123")

[node name="ParticlesJumpRight" type="CPUParticles2D" parent="."]
emitting = false
amount = 10
texture = SubResource("AtlasTexture_ff0jm")
lifetime = 0.1
one_shot = true
lifetime_randomness = 0.05
spread = 25.0
gravity = Vector2(0, 0)
initial_velocity_min = 350.0
initial_velocity_max = 450.0
scale_amount_curve = SubResource("Curve_0rvsl")
color_ramp = SubResource("Gradient_foeg7")

[node name="ParticlesJumpLeft" type="CPUParticles2D" parent="."]
emitting = false
amount = 10
texture = SubResource("AtlasTexture_r6a8v")
lifetime = 0.1
one_shot = true
lifetime_randomness = 0.05
direction = Vector2(-1, 0)
spread = 25.0
gravity = Vector2(0, 0)
initial_velocity_min = 350.0
initial_velocity_max = 450.0
scale_amount_curve = SubResource("Curve_ak0nt")
color_ramp = SubResource("Gradient_foeg7")

[node name="BloodParticles" type="CPUParticles2D" parent="."]
position = Vector2(0, -35)
emitting = false
amount = 20
texture = SubResource("AtlasTexture_na8hk")
lifetime = 0.2
one_shot = true
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 120.0
initial_velocity_max = 120.0
linear_accel_min = 0.05
linear_accel_max = 0.05
damping_min = 0.5
damping_max = 0.5
color_ramp = SubResource("Gradient_8180a")

[node name="SoundJumpStart" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_cd2hf")
volume_db = -10.0
bus = &"SFX"

[node name="SoundJumpStop" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_trbxg")
volume_db = -10.0
bus = &"SFX"

[node name="SoundPain" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_wsgte")
volume_db = -10.0
bus = &"SFX"

[node name="SoundSwordAttack" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_ym0xy")
volume_db = -10.0
bus = &"SFX"

[node name="SoundWalk" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_m65se")
volume_db = -10.0
bus = &"SFX"

[node name="GodModeTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[connection signal="draw" from="." to="." method="_on_draw"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_attack_area_body_exited"]
[connection signal="timeout" from="GodModeTimer" to="." method="_on_god_mode_timer_timeout"]
